# music-player-hw-control

./: CMakeLists.txt  ProjectHome.md  TODO.txt
inc/: util.h
inc/hw_interface/: Button.h  LedControl.h  PCM512x_spi.h  PushButton.h  Samsung_20T202DA2JA.h  SwitchButton.h
resource/: config.txt
src/: main.cpp  module.cpp  mpc_control.cpp  util.cpp
src/hw_interface/: Button.cpp  LedControl.cpp  PCM512x_spi.cpp  PushButton.cpp  RPi_GPIO.cpp  SPI_Device.cpp  Samsung_20T202DA2JA.cpp  SwitchButton.cpp
systemd/: mp-hw-control.service  readme.txt
